Fix the embed preview not showing immediately after the block is remounted.

--- a/packages/block-library/src/file/editor.scss
+++ b/packages/block-library/src/file/editor.scss
@@ -1,4 +1,10 @@
 .wp-block-file {
+	.wp-block[data-align="left"] > &,
+	.wp-block[data-align="right"] > & {
+		// Stop file block from collapsing when floated.
+		height: auto;
+	}
+
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
